Always use same name for image
There's no need to create a new image for
each project. Just use the same one since all
it does is upload code to a board.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,9 @@
 version: "3.7"
 services:
   arduino:
-    build:
-      context: .
-      args:
-        PROJECT: $PROJECT
-    image: $PROJECT:latest
+    build: .
+    image: arduino-uploader:latest
     volumes:
-      - ./sketches:/$PROJECT/sketches
-      - ./arduino-cli.yaml:/$PROJECT/arduino-cli.yaml
+      - ./sketches:/arduino/sketches
     devices:
       - /dev/ttyACM0:/dev/ttyACM0
