Add compile command integration test

--- a/v2/Makefile
+++ b/v2/Makefile
@@ -32,6 +32,9 @@ $(objects): $(shell find . -type f -name "*.go")
 mock:
 	go generate ./...
 
+lint:
+	golint -set_exit_status ./...
+
 test:
 	go test -v -cover ./...
 
