Add end-to-end test script and update docs

--- a/v2/Makefile
+++ b/v2/Makefile
@@ -36,17 +36,21 @@ lint:
 	golint -set_exit_status ./...
 
 test-unit:
-	rm -rf unit.out
-	go test -v -coverprofile unit.out github.com/robgonnella/ardi/v2/core
+	rm -rf test_artifacts/unit.out
+	go test -v -coverprofile test_artifacts/unit.out github.com/robgonnella/ardi/v2/core
 
 test-int:
-	rm -rf int.out
-	go test -v -coverprofile int.out -p 1 github.com/robgonnella/ardi/v2/commands
+	rm -rf test_artifacts/int.out
+	go test -v -coverprofile test_artifacts/int.out -p 1 github.com/robgonnella/ardi/v2/commands
+
+test-e2e:
+	./scripts/run_e2e.sh
 
 test-all:
 	$(MAKE) test-unit
 	$(MAKE) test-int
-	./coverage.sh
+	$(MAKE) test-e2e
+	./scripts/coverage.sh
 
 docs:
 	go run docs/gen.go
