--- a/.github/workflows/v1.yml
+++ b/.github/workflows/v1.yml
@@ -3,14 +3,14 @@ name: V1TEST
 on: [push]
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
-
     steps:
+      - name: testing ardi v1
+      - uses: actions/checkout@v2
       - uses: actions/setup-go@v2
         with:
           go-version: '^1.14.0'
-      - name: Add all platforms
         run: |
           cd ~ && GO111MODULE=on go get github.com/robgonnella/ardi@latest
           ardi version
