--- a/.github/workflows/v1.yml
+++ b/.github/workflows/v1.yml
@@ -7,8 +7,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: testing ardi v1
-      - uses: actions/checkout@v2
-      - uses: actions/setup-go@v2
+        uses: actions/checkout@v2
+        uses: actions/setup-go@v2
         with:
           go-version: '^1.14.0'
         run: |
