--- a/.github/workflows/v2.yml
+++ b/.github/workflows/v2.yml
@@ -6,10 +6,10 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      - name: testing ardi v2
-        uses: actions/checkout@v2
-        uses: actions/setup-go@v2
+      - uses: actions/checkout@v2
+      - uses: actions/setup-go@v2
         with:
           go-version: '^1.14.0'
+      - name: run ardi v2 tests
         run: |
           cd v2 && make test-all
