--- a/.github/workflows/v2.yml
+++ b/.github/workflows/v2.yml
@@ -5,11 +5,14 @@ on: [push]
 jobs:
   test:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        shell: bash
+        working-directory: v2
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-go@v2
         with:
           go-version: '^1.14.0'
       - name: run ardi v2 tests
-        run: |
-          cd v2 && make test-all
+        run: 'make test-all'
