Fix issue with zipping release files
Junk paths to file when zipping

--- a/v2/Makefile
+++ b/v2/Makefile
@@ -42,7 +42,7 @@ $(objects): $(shell find . -type f -name "*.go")
 	GOOS=$(goos) GOARCH=$(goarch) GOARM=$(goarm) go build -ldflags '-s -w' -o $(@)
 
 $(zips): $(objects)
-	zip $(@) $(@:.zip=)
+	zip -j $(@) $(@:.zip=)
 
 release: $(zips)
 
