Try using the actual file path when uploading release assets

--- a/.github/workflows/v2.deploy.yml
+++ b/.github/workflows/v2.deploy.yml
@@ -58,7 +58,7 @@ jobs:
                     url,
                     headers,
                     name,
-                    file: fs.readFileSync(filePath),
+                    file: filePath,
                   });
                 }
               } catch (e) {
