One more attempt to fix automated deployments

--- a/.github/workflows/v2.deploy.yml
+++ b/.github/workflows/v2.deploy.yml
@@ -52,13 +52,13 @@ jobs:
                     'content-length': contentLength(filePath),
                   };
 
-                  console.log('uploading', filePath);
+                  console.log('uploading', name, filePath);
 
                   await github.repos.uploadReleaseAsset({
                     url,
                     headers,
                     name,
-                    file: filePath,
+                    file: fs.createReadStream(filePath);,
                   });
                 }
               } catch (e) {
