Fix syntax error in upload release assets script

--- a/.github/workflows/v2.deploy.yml
+++ b/.github/workflows/v2.deploy.yml
@@ -58,7 +58,7 @@ jobs:
                     url,
                     headers,
                     name,
-                    file: fs.createReadStream(filePath);,
+                    file: fs.createReadStream(filePath),
                   });
                 }
               } catch (e) {
