--- a/.github/workflows/v2.deploy.yml
+++ b/.github/workflows/v2.deploy.yml
@@ -18,7 +18,7 @@ jobs:
         with:
           go-version: '^1.14.0'
       - name: build
-        run: 'make'
+        run: 'make release'
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
