Add 'needs' to release job in deployment workflow

--- a/.github/workflows/v2.deploy.yml
+++ b/.github/workflows/v2.deploy.yml
@@ -44,6 +44,7 @@ jobs:
           path: v2/build
   release:
     runs-on: ubuntu-latest
+    needs: [build_linux, build_darwin]
     steps:
       - name: Download Linux Build
         uses: actions/download-artifact@v2
