--- a/.github/workflows/v2.deploy.yml
+++ b/.github/workflows/v2.deploy.yml
@@ -46,6 +46,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: [build_linux, build_darwin]
     steps:
+      - uses: actions/checkout@v2
       - name: Download Linux Build
         uses: actions/download-artifact@v2
         with:
