Use a single glob pattern

--- a/.github/workflows/v2.deploy.yml
+++ b/.github/workflows/v2.deploy.yml
@@ -72,4 +72,4 @@ jobs:
           repo: ${{ github.repository  }}
           github_token: ${{ secrets.GITHUB_TOKEN }}
           release_id: ${{ steps.create_release.outputs.id }}
-          file_pattern: 'linux_build_${{ github.run_id }}/*.zip;darwin_build_${{ github.run_id }}/*.zip'
+          file_pattern: '*.zip'
