Fix version cmd and restrict workflow triggers

--- a/.github/workflows/v1.yml
+++ b/.github/workflows/v1.yml
@@ -2,9 +2,13 @@ name: V1
 
 on:
   push:
+    branches:
+      - '*'
     paths-ignore:
       - 'v2/**'
       - 'README.md'
+    tags:
+      - '!v*'
 
 jobs:
   test:
