--- a/.github/workflows/v2.deploy.yml
+++ b/.github/workflows/v2.deploy.yml
@@ -47,6 +47,9 @@ jobs:
     needs: [build_linux, build_darwin]
     steps:
       - uses: actions/checkout@v2
+      - name: Set output
+        id: vars
+        run: echo ::set-output name=tag::${GITHUB_REF#refs/*/}
       - name: Download Linux Build
         uses: actions/download-artifact@v2
         with:
@@ -71,4 +74,4 @@ jobs:
         with:
           files: '*.zip'
           repo-token: ${{ secrets.GITHUB_TOKEN }}
-          release-tag: ${{ github.ref }}
+          release-tag: ${{ steps.vars.outputs.tag }}
