--- a/.github/workflows/v2.yml
+++ b/.github/workflows/v2.yml
@@ -21,5 +21,7 @@ jobs:
       - uses: actions/setup-go@v2
         with:
           go-version: '^1.14.0'
+      - name: install golint
+        run: go get -u golang.org/x/lint/golint
       - name: run ardi v2 tests
         run: 'make test-all'
