--- a/v2/Makefile
+++ b/v2/Makefile
@@ -1,6 +1,9 @@
-platform = $(shell uname -s)
+platform ?= $(shell uname -s)
 dest = build
 tag = $(shell git describe --tags $(shell git rev-list --tags --max-count=1))
+ci ?= false
+
+#### Build Objects ####
 component = ardi_$(tag)
 component_path = $(dest)/$(component)
 linux_objects = $(component_path)_linux_amd64 \
@@ -11,9 +14,37 @@ $(component_path)_linux_arm64
 
 darwin_object = $(component_path)_darwin_amd64
 
-define add_zip_object
-$(eval zips += $(1).zip)
-endef
+#### Zip File Objects ####
+
+# see gather objects section below
+zips =
+
+#### Gather Objects ####
+
+ifeq ($(platform),Linux)
+objects := $(linux_objects)
+else
+objects := $(darwin_object)
+endif
+
+$(foreach o,$(objects), $(eval zips += $(o).zip))
+
+#### Test Objects ####
+test_output_dir = test_artifacts
+coverage_out = $(test_output_dir)/coverage.out
+integration_out = $(test_output_dir)/int.out
+unit_out = $(test_output_dir)/unit.out
+
+#### Test Packages ####
+unit_test_pkgs = github.com/robgonnella/ardi/v2/core \
+github.com/robgonnella/ardi/v2/util \
+github.com/robgonnella/ardi/v2/cli-wrapper \
+github.com/robgonnella/ardi/v2/paths \
+github.com/robgonnella/ardi/v2/types
+
+integration_test_pkgs = github.com/robgonnella/ardi/v2/commands
+
+#### Helper Functions ####
 
 define get_goos
 $(word 3, $(subst _, ,$1))
@@ -27,13 +58,7 @@ define get_goarm
 $(word 5, $(subst _, ,$1))
 endef
 
-ifeq ($(platform),Linux)
-objects := $(linux_objects)
-else
-objects := $(darwin_object)
-endif
-
-$(foreach o,$(objects),$(call add_zip_object,$(o)))
+#### Rules Section ####
 
 .PHONY: all
 all: $(objects)
@@ -60,24 +85,23 @@ lint:
 
 .PHONY: test-unit
 test-unit:
-	mkdir -p test_artifacts
-	rm -rf test_artifacts/unit.out
+	mkdir -p $(test_output_dir)
+	rm -rf $(unit_out)
 	go test \
 		-v \
 		-p 1 \
-		-coverprofile test_artifacts/unit.out \
-		github.com/robgonnella/ardi/v2/core \
-		github.com/robgonnella/ardi/v2/util
+		-coverprofile $(unit_out) \
+		$(unit_test_pkgs)
 
 .PHONY: test-int
-test-int:
-	mkdir -p test_artifacts
-	rm -rf test_artifacts/int.out
+test-integration:
+	mkdir -p $(test_output_dir)
+	rm -rf $(integration_out)
 	go test \
 		-v \
 		-p 1 \
-		-coverprofile test_artifacts/int.out \
-		github.com/robgonnella/ardi/v2/commands
+		-coverprofile $(integration_out) \
+		$(integration_test_pkgs)
 
 .PHONY: test-e2e
 test-e2e:
@@ -85,31 +109,35 @@ test-e2e:
 
 .PHONY: test-all
 test-all: lint
-	rm -rf test_artifacts
-	mkdir -p test_artifacts
+	rm -rf $(test_output_dir)
+	mkdir -p $(test_output_dir)
 	go test \
 		-v \
 		-p 1 \
-		-coverprofile test_artifacts/coverage.out \
-		github.com/robgonnella/ardi/v2/core \
-		github.com/robgonnella/ardi/v2/util \
-		github.com/robgonnella/ardi/v2/commands
+		-coverprofile $(coverage_out) \
+		$(unit_test_pkgs) \
+		$(integration_test_pkgs)
 	$(MAKE) test-e2e
 	$(MAKE) coverage
 	$(MAKE) badge
 
 .PHONY: coverage
 coverage:
-	go tool cover -func test_artifacts/coverage.out
+	go tool cover -func $(coverage_out)
 
 .PHONY: badge
 badge:
-	total=$$(go tool cover -func test_artifacts/coverage.out | grep total: | awk '{print $$3}') \
+ifeq ($(ci),false)
+	total=$$(go tool cover -func $(coverage_out) | grep total: | awk '{print $$3}') \
+		&& virtualenv .venv \
+		&& source .venv/bin/activate \
+		&& pip install -r requirements.txt \
 		&& python ./scripts/gen_badge.py $$total
+endif
 
 .PHONY: test-report
 test-report:
-	go tool cover -html=test_artifacts/coverage.out
+	go tool cover -html=$(coverage_out)
 
 .PHONY: docs
 docs:
