Updates to tooling
Now that go install (go version 1.16) allows you to install build
dependencies without affecting the module version requirements of
the current module, we can use a simple make rule for installing
these deps.

--- a/v2/Makefile
+++ b/v2/Makefile
@@ -135,6 +135,12 @@ test-report:
 docs:
 	go run docs/gen.go
 
+.PHONY: deps
+deps:
+	go install github.com/golang/mock/mockgen@latest
+	go install golang.org/x/lint/golint@latest
+
+
 .PHONY: clean
 clean:
 	rm -rf build
