--- a/.github/workflows/v2.yml
+++ b/.github/workflows/v2.yml
@@ -21,10 +21,10 @@ jobs:
       - uses: actions/setup-go@v2
         with:
           go-version: '^1.14.0'
-      - name: install golint
-        run: go get -u golang.org/x/lint/golint
+      - name: install deps
+        run: make deps
       - name: run ardi v2 tests
-        run: 'make test-all'
+        run: make test-all
       - name: upload codecov report
         if: ${{ github.ref == 'refs/heads/main' }}
         run: ./scripts/upload-codecov.sh
