Add better logging when parsing info from args
Adds extra log lines when generating build and upload targets
from args.

--- a/codecov.yml
+++ b/codecov.yml
@@ -1,13 +1,12 @@
 ignore:
-  - ".github/**/*"
-  - "ardi/**/*"
-  - "arguments/**/*"
-  - "commands/**/*"
-  - "**/docs/**/*"
-  - "**/main.go"
-  - "**/Makefile"
-  - "**/*.md"
-  - "v2/command/help.go"
+  - '.github/**/*'
+  - 'ardi/**/*'
+  - 'arguments/**/*'
+  - 'commands/**/*'
+  - '**/docs/**/*'
+  - '**/main.go'
+  - '**/Makefile'
+  - '**/*.md'
 
 coverage:
-  range: "50...90"
+  range: '50...90'
