--- a/.github/workflows/v2.deploy.yml
+++ b/.github/workflows/v2.deploy.yml
@@ -74,3 +74,15 @@ jobs:
           tag: ${{ github.ref }}
           overwrite: true
           file_glob: true
+  update_latest:
+    runs-on: ubuntu-latest
+    needs: [release]
+    defaults:
+      run:
+        shell: bash
+    steps:
+      - uses: actions/setup-go@v2
+        with:
+          go-version: '^1.14.0'
+      - name: Update go package to latest
+        run: GO111MODULE=on go get github.com/robgonnella/ardi/v2@"${GITHUB_REF#refs/tags/}"
