Fix deployment and bump V2 version to 2.4.4

--- a/.github/workflows/v2.deploy.yml
+++ b/.github/workflows/v2.deploy.yml
@@ -85,4 +85,4 @@ jobs:
         with:
           go-version: '^1.14.0'
       - name: Update go package to latest
-        run: GO111MODULE=on go get github.com/robgonnella/ardi/v2@"${GITHUB_REF#refs/tags/}"
+        run: GO111MODULE=on go install github.com/robgonnella/ardi/v2@"${GITHUB_REF#refs/tags/}"
